create bosqich section
create bosqich section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a href="#" class="bosqich__content-link">Xizmatlar bilan tanishish</a>
             </div>
             <div class="bosqich__video">
-                <iframe src="https://www.youtube.com/watch?v=jjmhYI0ZKD8&ab_channel=MFaktor" frameborder="0"></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/jjmhYI0ZKD8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </section>
