create xizmatlar section
create xizmatlar section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <nav class="navbar">
         <div class="container">
             <img src="./images/pixer-logo.svg" alt="Logo" class="navbar__logo">
+            <h1 class="visuallyhidden">Logo title</h1>
             <ul class="nav-list">
                 <li class="nav-item">
                     <a href="#" class="nav-link">Bosh sahifa</a>
@@ -47,5 +48,55 @@
             </div>
         </div>
     </section>
+    <section class="xizmatlar">
+        <div class="container">
+            <div class="xizmatlar__content">
+                <h2 class="xizmatlar__content-title">Xizmatlar</h2>
+                <p class="xizmatlar__content-text">Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis lacinia ex, eget  <br> sollicitudin massa pellentesque in. Vivamus mattis eros at sem pulvinar<p>
+            </div>
+            <ul class="xizmatlar-list">
+                <li class="xizmatlar-item">
+                    <img src="./images/website-illustration.png" alt="website-illustration" class="xizmatlar-item__image">
+                    <div class="xizmatlar__content">
+                        <h2 class="xizmatlar__content-title">Vebsayt tuzish</h2>
+                        <p class="xizmatlar__content-text">Lorem, ipsum.<p>
+                    </div>
+                </li>
+                <li class="xizmatlar-item">
+                    <img src="./images/bot-illustration.png" alt="website-illustration" class="xizmatlar-item__image">
+                    <div class="xizmatlar__content">
+                        <h2 class="xizmatlar__content-title">Vebsayt tuzish</h2>
+                        <p class="xizmatlar__content-text">Lorem, ipsum.<p>
+                    </div>
+                </li>
+                <li class="xizmatlar-item">
+                    <img src="./images/smm-illustration.png" alt="website-illustration" class="xizmatlar-item__image">
+                    <div class="xizmatlar__content">
+                        <h2 class="xizmatlar__content-title">Vebsayt tuzish</h2>
+                        <p class="xizmatlar__content-text">Lorem, ipsum.<p>
+                    </div>
+                </li>
+                <li class="xizmatlar-item">
+                    <img src="./images/design-illustration.png" alt="website-illustration" class="xizmatlar-item__image">
+                    <div class="xizmatlar__content">
+                        <h2 class="xizmatlar__content-title">Vebsayt tuzish</h2>
+                        <p class="xizmatlar__content-text">Lorem, ipsum.<p>
+                    </div>
+                </li>
+                <li class="xizmatlar-item">
+                    <img src="./images/crm-illustration.png" alt="website-illustration" class="xizmatlar-item__image">
+                    <div class="xizmatlar__content">
+                        <h2 class="xizmatlar__content-title">Vebsayt tuzish</h2>
+                        <p class="xizmatlar__content-text">Lorem, ipsum.<p>
+                    </div>
+                </li>
+            </ul>
+            <div class="xizmatlar-link">
+                <a href="#" class="xizmatlar-link__buyurtma">Buyurtma berish</a>
+                <a href="#" class="xizmatlar-link__sahifa">Xizmatlar sahifasiga o’tish</a>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
