create ishlaymiz section
create ishlaymiz section

--- a/index.html
+++ b/index.html
@@ -97,6 +97,62 @@
             </div>
         </div>
     </section>
-
+    <section class="ishlaymiz">
+        <div class="container">
+            <div class="xizmatlar__content">
+                <h2 class="xizmatlar__content-title">Biz qanday ishlaymiz?</h2>
+                <p class="xizmatlar__content-text">Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis lacinia ex, eget  <br> sollicitudin massa pellentesque in. Vivamus mattis eros at sem pulvinar<p>
+            </div>
+            <div class="talablar">
+                <div class="talabalar-image">
+                    <img src="./images/step-illlustration.png" alt="step-illlustration" class="talablar-image___photo">
+                </div>
+                <div class="talablar__content">
+                    <h3 class="talablar__content-title">Talablarni aniqlab chiqamiz</h3>
+                    <p class="talablar__content-text">Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis</p>
+                </div>
+            </div>
+            <div class="talablar yechimlar">
+                <div class="talabalar-image">
+                    <img src="./images/step-illlustration (1).png" alt="step-illlustration" class="talablar-image___photo">
+                </div>
+                <div class="talablar__content">
+                    <h3 class="talablar__content-title">Bir necha yechimlarni taklif qilamiz</h3>
+                    <p class="talablar__content-text">Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis</p>
+                </div>
+            </div>
+            <div class="talablar">
+                <div class="talabalar-image">
+                    <img src="./images/step-illustration.png" alt="step-illlustration" class="talablar-image___photo">
+                </div>
+                <div class="talablar__content">
+                    <h3 class="talablar__content-title">Talablarni aniqlab chiqamiz</h3>
+                    <p class="talablar__content-text">Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis</p>
+                </div>
+            </div> 
+            <div class="talablar yechimlar">
+                <div class="talabalar-image">
+                    <img src="./images/step-illustration (1).png" alt="step-illlustration" class="talablar-image___photo">
+                </div>
+                <div class="talablar__content">
+                    <h3 class="talablar__content-title">Talablarni aniqlab chiqamiz</h3>
+                    <p class="talablar__content-text">Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis</p>
+                </div>
+            </div> 
+            <div class="talablar">
+                <div class="talabalar-image">
+                    <img src="./images/step-illustration (2).png" alt="step-illlustration" class="talablar-image___photo">
+                </div>
+                <div class="talablar__content">
+                    <h3 class="talablar__content-title">Talablarni aniqlab chiqamiz</h3>
+                    <p class="talablar__content-text">Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis</p>
+                </div>
+            </div>
+            <div class="talablar-link__section">
+                <a href="#" class="talablar-link">Buyurtma berish</a>
+            </div>
+        </div>
+        
+    </section>
 </body>
 </html>
