create buyurtma section
create buyurtma section

--- a/index.html
+++ b/index.html
@@ -152,7 +152,33 @@
                 <a href="#" class="talablar-link">Buyurtma berish</a>
             </div>
         </div>
-        
     </section>
+    <section class="buyurtma">
+        <div class="container">
+            <div class="buyurtma__content">
+                <div class="buyurtma__content">
+                    <h3 class="buyurtma__content-title">Buyurtma berish</h3>
+                    <p class="buyurtma__content-text">Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis lacinia ex, eget sollicitudin massa pellentesque in. Vivamus mattis eros at sem pulvinar</p>
+                </div>
+            </div>
+            <div class="form-section">
+                <form class="form-section__fill">
+                    <label class="fill__label">
+                        <input type="text" placeholder="Ismingiz" class="label__input">
+                    </label>
+                    <label class="fill__label">
+                        <input type="number" placeholder="Telefon raqamingiz" class="label__input">
+                    </label>
+                    <select class="fill__select" aria-placeholder="xizmat turi">
+                        <option value="xizmat turi" selected>Xizmat turi</option>
+                        <option value="bizness menejment">Bizness menejment</option>
+                        <option value="web sayt yaratish">Web sayt yaratish</option>
+                    </select>
+                    <button type="submit" class="submit">Buyurtma berish</button>
+                </form>
+            </div>
+        </div>
+    </section>
+    
 </body>
 </html>
