create footer section
create footer section

--- a/index.html
+++ b/index.html
@@ -179,6 +179,50 @@
             </div>
         </div>
     </section>
-    
+    <footer class="footer-section">
+        <div class="container">
+            <div class="footer-list">
+                <h3 class="footer-list__title">Copyright 2020</h3>
+                <p class="footer-list__text">Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis lacinia ex, eget sollicitudin massa pellentesque in. Vivamus mattis eros at sem pulvinar tincidunt.</p>
+            </div>
+            <div class="footer-list">
+                <h3 class="footer-list__title">Sayt sahifalari</h3>
+                <ul class="footer-list__list">
+                    <li class="footer-item">
+                        <a href="#" class="footer-item__link">Bosh sahifa</a>
+                    </li>
+                    <li class="footer-item">
+                        <a href="#" class="footer-item__link">Xizmatlar</a>
+                    </li>
+                    <li class="footer-item">
+                        <a href="#" class="footer-item__link">Portfolio</a>
+                    </li>
+                    <li class="footer-item">
+                        <a href="#" class="footer-item__link">Jamoa</a>
+                    </li>
+                    <li class="footer-item">
+                        <a href="#" class="footer-item__link">Blog</a>
+                    </li>
+                    <li class="footer-item">
+                        <a href="#" class="footer-item__link">Kontaktlar</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-list">
+                <h3 class="footer-list__title">Biz internetda</h3>
+                <ul class="footer-list__list">
+                    <li class="footer-item">
+                        <a href="#" class="footer-link"><img src="./images/telegram.png" alt="telegram" class="footer-link__image"></a>
+                    </li>
+                    <li class="footer-item">
+                        <a href="#" class="footer-link"><img src="./images/facebook.png" alt="facebook" class="footer-link__image"></a>
+                    </li>
+                    <li class="footer-item">
+                        <a href="#" class="footer-link"><img src="./images/instagram.png" alt="instagram" class="footer-link__image"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
