--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/responsive.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -34,6 +35,7 @@
                     <a href="#" class="nav-link number">+998993493904</a>
                 </li>
             </ul>
+            <img src="./images/burger.svg" alt="burger" class="burger">
         </div>
     </nav>
     <section class="bosqich">
@@ -44,7 +46,7 @@
                 <a href="#" class="bosqich__content-link">Xizmatlar bilan tanishish</a>
             </div>
             <div class="bosqich__video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/jjmhYI0ZKD8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/jjmhYI0ZKD8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="iframe"></iframe>
             </div>
         </div>
     </section>
@@ -65,28 +67,28 @@
                 <li class="xizmatlar-item">
                     <img src="./images/bot-illustration.png" alt="website-illustration" class="xizmatlar-item__image">
                     <div class="xizmatlar__content">
-                        <h2 class="xizmatlar__content-title">Vebsayt tuzish</h2>
+                        <h2 class="xizmatlar__content-title">Telegram bot</h2>
                         <p class="xizmatlar__content-text">Lorem, ipsum.<p>
                     </div>
                 </li>
                 <li class="xizmatlar-item">
                     <img src="./images/smm-illustration.png" alt="website-illustration" class="xizmatlar-item__image">
                     <div class="xizmatlar__content">
-                        <h2 class="xizmatlar__content-title">Vebsayt tuzish</h2>
+                        <h2 class="xizmatlar__content-title">SMM</h2>
                         <p class="xizmatlar__content-text">Lorem, ipsum.<p>
                     </div>
                 </li>
                 <li class="xizmatlar-item">
                     <img src="./images/design-illustration.png" alt="website-illustration" class="xizmatlar-item__image">
                     <div class="xizmatlar__content">
-                        <h2 class="xizmatlar__content-title">Vebsayt tuzish</h2>
+                        <h2 class="xizmatlar__content-title">Grafik dizayn</h2>
                         <p class="xizmatlar__content-text">Lorem, ipsum.<p>
                     </div>
                 </li>
                 <li class="xizmatlar-item">
                     <img src="./images/crm-illustration.png" alt="website-illustration" class="xizmatlar-item__image">
                     <div class="xizmatlar__content">
-                        <h2 class="xizmatlar__content-title">Vebsayt tuzish</h2>
+                        <h2 class="xizmatlar__content-title">CRM tizimlari</h2>
                         <p class="xizmatlar__content-text">Lorem, ipsum.<p>
                     </div>
                 </li>
